--- a/pushbox.css
+++ b/pushbox.css
@@ -20,22 +20,27 @@ canvas {
 	z-index: 9;
 	position: absolute;
 	left: 50%;
-	bottom: 0;
-	transform: translate(-50%, 0);
+	bottom: 2px;
 	width: 350px;
-	height: 60px;
-	padding: 10px 20px;
-	line-height: 20px;
-	font-size: 12px;
-	border: 2px solid #fff;
-	border-radius: 2px;
-	background: #cdc6a8;
+	height: 80px;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box; /* Firefox */
 	-webkit-box-sizing: border-box; /* Safari */
+	padding: 10px 20px;
+	line-height: 20px;
+	font-size: 12px;
+	color: #d1d2d4;
+	letter-spacing: 3px;
+	transform: translate(-50%, 0);
+	background: #000;
 }
 
 .game-container .chatBox p {
 	margin: 0;
 	user-select: none;
+}
+
+.introduce p {
+	background-color: #eee;
+	text-align: center;
 }
