--- a/pushbox.css
+++ b/pushbox.css
@@ -9,6 +9,7 @@ body {
 	width: 416px;
 	height: 384px;
 	margin: 0 auto;
+	border-radius: 3px;
 	background: #eee;
 }
 
@@ -16,6 +17,7 @@ canvas {
 	position: absolute;
 	top: 0;
 	left: 0;
+	border-radius: 3px;
 }
 
 .game-container .chatBox {
