--- a/sokoban.css
+++ b/sokoban.css
@@ -2,6 +2,8 @@ body {
 	margin: 0;
 	margin-top: 10px;
 	background-color: #000;
+	-webkit-touch-callout: none !important;
+	overflow: hidden;
 }
 
 .game-container {
@@ -17,6 +19,8 @@ canvas {
 	position: absolute;
 	top: 0;
 	left: 0;
+	width: 100%;
+	height: 100%;
 	border-radius: 3px;
 }
 
